Fix spacing for mobile layout

--- a/src/App.css
+++ b/src/App.css
@@ -87,36 +87,36 @@ button:active {
   line-height: 1.5; */
 }
 
-@media screen and (max-width: 391px) {
+@media screen and (max-width: 425px) {
   main {
     flex-direction: column-reverse;
-    height: 100vh;
+    height: 90vh;
   }
 
   .button-container {
-    height: 25vh;
+    height: 25%;
   }
 
   .quote-container {
-    height: 40vh;
+    height: 40%;
   }
 
   .img-container {
-    height: 35vh;
+    height: 35%;
   }
 
   img {
-    margin: 5% 0 0 5%;
-    height: 300px;
+    margin: 2em 0 1em 0;
+    height: 60px;
   }
 
   button {
     margin: 0 0 50px 0;
     font-size: 30px;
-    width: 300px;
+    width: 75%;
   }
 
-  p {
-    font-size: 16px;
+  .quote {
+    font-size: 0.7em;
   }
 }
